<resources>
    <string name="app_name">Habous</string>
    <string name="insrciption">S\'inscrire</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prenom</string>
    <string name="date_de_naissance">Date de naissance</string>
    <string name="genre">Genre</string>
    <string name="cin">Cin</string>
    <string name="role">Role</string>
    <string name="documents">documents</string>
    <string name="valider">Valider</string>
    <string name="title_activity_dash_test">DashTestActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="home_second">Home Second</string>
    <string name="title_activity_dash">DashActivity</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="title_activity_admin_drawer">AdminDrawerActivity</string>
</resources>
