<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".Views.User.ModifierCandidatActivity">
    <TextView
        android:id="@+id/lblnewuser"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/mekka"
        android:fontFamily="cursive"
        android:gravity="center_horizontal"
        android:paddingVertical="70dp"
        android:text="Modification des informations"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="30sp" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_marginHorizontal="80dp"
                android:layout_marginBottom="20dp"
                android:id="@+id/pdpImageView"
                android:src="@drawable/user_icon"
                android:layout_width="match_parent"
                android:layout_height="200dp" />
            <TextView
                android:id="@+id/lblnom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nom"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="30dp"
                android:textColor="@color/colorAccent"/>
            <EditText
                android:id="@+id/txtnom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="30dp"/>
            <TextView
                android:id="@+id/lblprenom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prenom"
                android:layout_marginHorizontal="30dp"
                android:textColor="@color/colorAccent"/>
            <EditText
                android:id="@+id/txtprenom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="30dp"/>
            <TextView
                android:id="@+id/lbldatenaiss"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_de_naissance"
                android:layout_marginHorizontal="30dp"
                android:textColor="@color/colorAccent"/>
            <EditText
                android:id="@+id/txtdatenaiss"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="30dp"/>
            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/genrespin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="25dp"/>
            <TextView
                android:id="@+id/lblcin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cin"
                android:layout_marginHorizontal="30dp"
                android:textColor="@color/colorAccent"/>
            <EditText
                android:id="@+id/txtcin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="30dp"/>
            <TextView
                android:id="@+id/lblemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Email :"
                android:layout_marginHorizontal="30dp"
                android:textColor="@color/colorAccent"/>
            <EditText
                android:id="@+id/txtemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="30dp"/>
            <TextView
                android:id="@+id/lbltel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Telephone"
                android:layout_marginHorizontal="30dp"
                android:textColor="@color/colorAccent"/>
            <EditText
                android:id="@+id/txttel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="30dp"/>
            <TextView
                android:id="@+id/lblpcin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Documents (cin):"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="30dp"
                android:textColor="@color/colorAccent"/>
            <ImageView
                android:layout_marginHorizontal="80dp"
                android:layout_marginBottom="20dp"
                android:id="@+id/cinImageView"
                android:src="@drawable/user_icon"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <Button
                android:id="@+id/btninscrire"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Modifier"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="25dp"
                android:background="@drawable/login_button_bg"
                android:textColor="#fafafa"
                android:onClick="SendCandidat"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>