<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".Views.User.CandidatureActivity">
    <TextView
        android:id="@+id/lblnewuser"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/mekka"
        android:fontFamily="cursive"
        android:gravity="center_horizontal"
        android:paddingVertical="70dp"
        android:text="Nouvelle candidature"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="30sp" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_marginHorizontal="80dp"
                android:layout_marginBottom="20dp"
                android:id="@+id/pdpImageView"
                android:src="@drawable/user_icon"
                android:layout_width="match_parent"
                android:layout_height="200dp" />
            <TextView
                android:id="@+id/pdptextview"
                android:hint="Selectionner une image"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="120dp"
                android:layout_marginBottom="25dp"
                android:id="@+id/btnPdp"
                android:backgroundTint="@color/colorPrimary"
                android:text="Galerie"
                android:textColor="@android:color/white"
                android:textSize="20sp"></Button>
            <TextView
                android:id="@+id/lblnom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nom"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="30dp"
                android:textColor="@color/colorAccent"/>
            <EditText
                android:id="@+id/txtnom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="30dp"/>
            <TextView
                android:id="@+id/lblprenom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prenom"
                android:layout_marginHorizontal="30dp"
                android:textColor="@color/colorAccent"/>
            <EditText
                android:id="@+id/txtprenom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="30dp"/>
            <TextView
                android:id="@+id/lbldatenaiss"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_de_naissance"
                android:layout_marginHorizontal="30dp"
                android:textColor="@color/colorAccent"/>
            <EditText
                android:id="@+id/txtdatenaiss"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="Double click pour selectionner"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="30dp"/>
            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/genrespin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="25dp"/>
            <TextView
                android:id="@+id/lblcin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cin"
                android:layout_marginHorizontal="30dp"
                android:textColor="@color/colorAccent"/>
            <EditText
                android:id="@+id/txtcin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="30dp"/>
            <TextView
                android:id="@+id/lblemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Email :"
                android:layout_marginHorizontal="30dp"
                android:textColor="@color/colorAccent"/>
            <EditText
                android:id="@+id/txtemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="30dp"/>
            <TextView
                android:id="@+id/lbltel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Telephone"
                android:layout_marginHorizontal="30dp"
                android:textColor="@color/colorAccent"/>
            <EditText
                android:id="@+id/txttel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="30dp"/>
            <TextView
                android:id="@+id/lblpcin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Documents (cin):"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="30dp"
                android:textColor="@color/colorAccent"/>
            <ImageView
                android:id="@+id/cinImageView"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="80dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/cardid"
                android:layout_height="200dp" />
            <TextView
                android:id="@+id/cinptextview"
                android:hint="Selectionner une image"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="120dp"
                android:layout_marginBottom="25dp"
                android:id="@+id/btncin"
                android:backgroundTint="@color/colorPrimary"
                android:text="Galerie"
                android:textColor="@android:color/white"
                android:textSize="20sp"></Button>
            <TextView
                android:id="@+id/lblppassport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Documents (Passport):"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="30dp"
                android:textColor="@color/colorAccent"/>
            <ImageView
                android:id="@+id/passImageView"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="80dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/passport"
                android:layout_height="200dp" />
            <TextView
                android:id="@+id/passtextview"
                android:hint="Selectionner une image"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="120dp"
                android:layout_marginBottom="25dp"
                android:id="@+id/btnpass"
                android:backgroundTint="@color/colorPrimary"
                android:text="Galerie"
                android:textColor="@android:color/white"
                android:textSize="20sp"></Button>
            <Button
                android:id="@+id/btninscrire"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/valider"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="25dp"
                android:background="@drawable/login_button_bg"
                android:textColor="#fafafa"
                android:onClick="sbmitClick"/>
            <Button
                android:id="@+id/btnterm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Terminer la candidature"
                android:visibility="invisible"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="25dp"
                android:background="@drawable/login_button_bg"
                android:textColor="#fafafa"
                android:onClick="term"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>